<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_updater</name>
  <version>0.0.0</version>
  <description>This package links robot1/odom frame and robot1/base_footprint frame</description>
  <maintainer email="liuji@umd.edu">Ji Liu</maintainer>
  <maintainer email="ychen921@umd.edu">Yi-Chung Chen</maintainer>
  <maintainer email="weisu77@umd.edu">Wei-Li Su</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros2</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
